--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,14 +1,24 @@
 # Default Editor
 # editor /opt/homebrew/bin/nvim
 
+# theme
+include one_dark.conf
+
+## background
+# background_opacity 0.5
+background_image /Users/crowds/Pictures/Backgrounds/bg_1.png
+background_image_layout cscaled
+background_tint 0.985
+# background_tint_gaps 1.0
+background_blur 64
 # 
 allow_remote_control true
 cursor_shape block
-
+# Font 
 font_family      VictorMono Nerd Font
-bold_font        VictorMonoNF-SemiBold
-italic_font      VictorMonoNF-MediumItalic
-bold_italic_font VictorMonoNF-SemiBoldItalic
+# bold_font        VictorMonoNF-SemiBold
+# italic_font      VictorMonoNF-MediumItalic
+# bold_italic_font VictorMonoNF-SemiBoldItalic
 
 font_size 18.0
 disable_ligatures never
@@ -24,7 +34,7 @@ enabled_layouts tall:bias=50;full_size=1;mirrored=false
 window_margin_width  0
 macos_quit_when_last_window_closed yes
 # macos_show_window_title_in         null
-  macos_titlebar_color               background
+macos_titlebar_color               background
 
 url_style           single
 open_url_modifiers  ctrl
@@ -44,10 +54,6 @@ tab_bar_margin_width    1.5
 repaint_delay 8
 input_delay 2
 sync_to_monitor yes
-
-# theme
-include one_dark.conf
-
 
 # Keymaps
 map cmd+c        copy_to_clipboard
