--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,11 +6,11 @@ include one_dark.conf
 
 ## background
 # background_opacity 0.5
-background_image /Users/crowds/Pictures/Backgrounds/bg_1.png
-background_image_layout cscaled
-background_tint 0.99
+# background_blur 64
+# background_image /Users/crowds/Pictures/Backgrounds/bg_1.png
+# background_image_layout cscaled
+# background_tint 0.984
 # background_tint_gaps 1.0
-background_blur 64
 # 
 allow_remote_control true
 cursor_shape block
@@ -60,14 +60,14 @@ map cmd+c        copy_to_clipboard
 map cmd+v        paste_from_clipboard
 map shift+insert paste_from_clipboard
 
+## Windwos
 map ctrl+left  neighboring_window left 
 map ctrl+up    neighboring_window up
 map ctrl+down  neighboring_window down
 map ctrl+right neighboring_window right
-
 map ctrl+[ layout_action decrease_num_full_size_windows
 map ctrl+] layout_action increase_num_full_size_windows
-
+## Tabs
 map alt+1 goto_tab 1
 map alt+2 goto_tab 2
 map alt+3 goto_tab 3
