adjust: ideavim & kitty & karabiner

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -9,11 +9,12 @@ include one_dark.conf
 # background_blur 64
 # background_image /Users/crowds/Pictures/Backgrounds/bg_1.png
 # background_image_layout cscaled
-# background_tint 0.984
+# background_tint 0.9
 # background_tint_gaps 1.0
 # 
 allow_remote_control true
 cursor_shape block
+cursor_trail 3
 # Font 
 font_family      VictorMono Nerd Font
 # bold_font        VictorMonoNF-SemiBold
